Updated Edit Post
Also capped the "Latest Posts" sidebar widget to the 5 most recent posts, and they're now in descending order so the most recent is at the top.

--- a/soverance.com/Views/Blog/EditPost.cshtml
+++ b/soverance.com/Views/Blog/EditPost.cshtml
@@ -24,49 +24,159 @@
 <section class="about-info ptb150">
     <div class="container">
         <div class="row">
-            <div class="item-left col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div class="col-lg-8 col-md-8 col-sm-7 col-xs-12">
                 <form asp-action="EditPost">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <input type="hidden" asp-for="PostId" />
                     <div class="form-group">
-                        <select asp-for="CategoryId" asp-items="ViewBag.CategoryDropDownList" class="dropdown border-dropdown plr50 ptb19 color-white" style="width:55.5%">
-                            <option selected="selected" value="CategoryId">Select Category</option>
-                        </select>
-                        <span asp-validation-for="CategoryId" class="text-danger"></span>
-                        <p></p>
-                        <label asp-for="Date" class="control-label"></label>
-                        <input asp-for="Date" class="form-control width-50" />
-                        <span asp-validation-for="Date" class="text-danger"></span>
-                        <label asp-for="Title" class="control-label"></label>
-                        <input asp-for="Title" class="form-control" />
-                        <span asp-validation-for="Title" class="text-danger"></span>
-                        <label asp-for="Content" class="control-label"></label>
-                        <textarea asp-for="Content" class="form-control" rows="25"></textarea>
-                        <span asp-validation-for="Content" class="text-danger"></span>
-                        <label asp-for="Author" class="control-label"></label>
-                        <input asp-for="Author" class="form-control" />
-                        <span asp-validation-for="Author" class="text-danger width-50"></span>
-                        <label asp-for="VideoUrl" class="control-label"></label>
-                        <input asp-for="VideoUrl" class="form-control" />
-                        <span asp-validation-for="VideoUrl" class="text-danger"></span>
-                        <label asp-for="Slider1" class="control-label"></label>
-                        <input asp-for="Slider1" class="form-control" />
-                        <span asp-validation-for="Slider1" class="text-danger"></span>
-                        <label asp-for="Slider2" class="control-label"></label>
-                        <input asp-for="Slider2" class="form-control" />
-                        <span asp-validation-for="Slider2" class="text-danger"></span>
-                        <label asp-for="Slider3" class="control-label"></label>
-                        <input asp-for="Slider3" class="form-control" />
-                        <span asp-validation-for="Slider3" class="text-danger"></span>
+                        <div class="col-sm-12 col-xs-12">
+                            <div class="mt50">
+                                <div class="tabs info-tabs default-tabs text-center mt60">
+                                    <div class="tabs-nav">
+                                        <ul class="list-inline nav nav-tabs fsize-0">
+                                            <li class="active">
+                                                <a href="#details" data-toggle="tab" class="fsize-14 fweight-700 uppercase" aria-expanded="true">
+                                                    Details Config
+                                                </a>
+                                            </li>
+                                            <li class="">
+                                                <a href="#content" data-toggle="tab" class="fsize-14 fweight-700 uppercase" aria-expanded="false">
+                                                    Content Config
+                                                </a>
+                                            </li>
+                                            <li class="">
+                                                <a href="#media" data-toggle="tab" class="fsize-14 fweight-700 uppercase" aria-expanded="false">
+                                                    Media Config
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="tab-content relative">
+                                        <div class="tab-pane fade text-left clearfix active in" id="details">
+                                            <div class="main-text p60">
+                                                <h5 class="fsize-32 fweight-700 font-agency uppercase">New Post Configuration:</h5>
+                                                <p class="lheight-26 mt20">
+                                                    Enter some default post configuration data here.
+                                                </p>
+                                                <ul class="list-1 pt10">
+                                                    <li class="color5">
+                                                        A category is required.
+                                                    </li>
+                                                    <li class="color5">
+                                                        Always enter the date in "<strong>MM/DD/YYYY</strong>" format.
+                                                    </li>
+                                                    <li class="color5">
+                                                        Titles and Descriptions should be both short and entered in plain text.
+                                                    </li>
+                                                </ul>
+                                                <p class="lheight-26 mt20">
+                                                    Post Type determines what media the post is advertised with when it appears in the main blog list.
+                                                    Static type will use the image specified for Slider1.
+                                                    Once saved, the title will be automatically sanitized and formatted to be used as the post's URL slug.
+                                                </p>
+                                                <p>
+                                                    <select asp-for="CategoryId" asp-items="ViewBag.CategoryDropDownList" class="dropdown border-dropdown plr50 ptb19 color-white" style="width:50%">
+                                                        <option selected="selected" value="">Select Category</option>
+                                                    </select>
+                                                    <span asp-validation-for="CategoryId" class="text-danger"></span>
+                                                </p>
+                                                <p>
+                                                    <select asp-for="PostType" asp-items="ViewBag.PostTypes" class="dropdown border-dropdown plr50 ptb19 color-white" style="width:50%">
+                                                        <option selected="selected" value="">Select Post Type</option>
+                                                    </select>
+                                                    <span asp-validation-for="PostType" class="text-danger"></span>
+                                                </p>
+                                                <p>
+                                                    <label asp-for="Date" class="control-label"></label>
+                                                    <input asp-for="Date" class="form-control width-30" />
+                                                    <span asp-validation-for="Date" class="text-danger"></span>
+                                                </p>
+                                                <p>
+                                                    <label asp-for="Title" class="control-label"></label>
+                                                    <input asp-for="Title" class="form-control" />
+                                                    <span asp-validation-for="Title" class="text-danger"></span>
+                                                </p>
+                                                <p>
+                                                    <label asp-for="Description" class="control-label"></label>
+                                                    <input asp-for="Description" class="form-control" />
+                                                    <span asp-validation-for="Description" class="text-danger"></span>
+                                                </p>
+
+                                                <p>
+                                                    <label asp-for="Author" class="control-label"></label>
+                                                    <input asp-for="Author" class="form-control" />
+                                                    <span asp-validation-for="Author" class="text-danger width-50"></span>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane fade text-left clearfix" id="content">
+                                            <div class="main-text p60">
+                                                <h5 class="fsize-32 fweight-700 font-agency uppercase">Body Content:</h5>
+                                                <p class="lheight-26 mt20">
+                                                    Enter some post content HTML data here.
+                                                </p>
+                                                <ul class="list-1 pt10">
+                                                    <li class="color5">
+                                                        Body content must be pure HTML.
+                                                    </li>
+                                                    <li class="color5">
+                                                        It is recommended to simply edit the provided template, leaving the HTML framework intact
+                                                    </li>
+                                                </ul>
+                                                <p class="lheight-30 mt20">
+                                                    <label asp-for="Content" class="control-label"></label>
+                                                    <textarea asp-for="Content" class="form-control" rows="25"></textarea>
+                                                    <span asp-validation-for="Content" class="text-danger"></span>
+                                                </p>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane fade text-left clearfix" id="media">
+                                            <div class="main-text p60">
+                                                <h5 class="fsize-32 fweight-700 font-agency uppercase">Media Config:</h5>
+                                                <p class="lheight-30 mt20">
+                                                    Occasionally the post may be advertised on various pages of the site using either a static image or a slider preview.
+                                                    The images should all be 270 x 282.  Slider previews will use all three images, while static previews will just use the first one.
+                                                    For a preview video, specify a YouTube "watch" URL, i.e.
+                                                </p>
+                                                <p>
+                                                    https://www.youtube.com/watch?v=8dH-CnwhWC4
+                                                </p>
+                                                <p>
+                                                    Images should be uploaded locally and then specified with the "<strong>../images/</strong>" prefix syntax.
+                                                </p>
+                                                <h5 class="fsize-32 fweight-700 font-agency uppercase">YouTube Video</h5>
+                                                <p class="lheight-30 mt20">
+                                                    <label asp-for="VideoUrl" class="control-label"></label>
+                                                    <input asp-for="VideoUrl" class="form-control" />
+                                                    <span asp-validation-for="VideoUrl" class="text-danger"></span>
+                                                </p>
+                                                <h5 class="fsize-32 fweight-700 font-agency uppercase">SLIDER IMAGES - 270 x 282</h5>
+                                                <p class="lheight-30 mt20">
+                                                    <label asp-for="Slider1" class="control-label"></label>
+                                                    <input asp-for="Slider1" class="form-control" value="../images/blog/slider-blank.jpg" />
+                                                    <span asp-validation-for="Slider1" class="text-danger"></span>
+                                                    <label asp-for="Slider2" class="control-label"></label>
+                                                    <input asp-for="Slider2" class="form-control" value="../images/blog/slider-blank.jpg" />
+                                                    <span asp-validation-for="Slider2" class="text-danger"></span>
+                                                    <label asp-for="Slider3" class="control-label"></label>
+                                                    <input asp-for="Slider3" class="form-control" value="../images/blog/slider-blank.jpg" />
+                                                    <span asp-validation-for="Slider3" class="text-danger"></span>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Save" class="btn border-btn plr50 ptb19 color-white" />
                     </div>
                 </form>
-                <div>
-                    <a asp-action="Index">Back to List</a>
-                </div>
             </div>
+        </div>
+        <div>
+            <a asp-action="Index">Back to List</a>
         </div>
     </div>
 </section>
