--- a/soverance.com/Views/Blog/Index.cshtml
+++ b/soverance.com/Views/Blog/Index.cshtml
@@ -280,7 +280,7 @@
                     <div class="widget-wrapper">
                         <table class="table list-1">
                             <tbody>
-                                @foreach (var post in ViewBag.AllPosts)
+                                @foreach (var post in ViewBag.LatestFive)
                                 {
                                 <tr>
                                     <td>
@@ -313,43 +313,6 @@
                                 }
                             </tbody>
                         </table>
-                    </div>
-                </div>
-                <div class="widget-bl archive-widget">
-                    <h5 class="fsize-20 text-center">Archives</h5>
-                    <div class="widget-wrapper">
-                        <ul class="list-1">
-                            <li class="color1">
-                                <a href="#">
-                                    <span>July 2018</span>
-                                    <span class="float-right">/375</span>
-                                </a>
-                            </li>
-                            <li class="color1">
-                                <a href="#">
-                                    <span>June 2018</span>
-                                    <span class="float-right">/375</span>
-                                </a>
-                            </li>
-                            <li class="color1">
-                                <a href="#">
-                                    <span>May 2018</span>
-                                    <span class="float-right">/375</span>
-                                </a>
-                            </li>
-                            <li class="color1">
-                                <a href="#">
-                                    <span>April 2018</span>
-                                    <span class="float-right">/375</span>
-                                </a>
-                            </li>
-                            <li class="color1">
-                                <a href="#">
-                                    <span>March 2018</span>
-                                    <span class="float-right">/375</span>
-                                </a>
-                            </li>
-                        </ul>
                     </div>
                 </div>
                 <div class="widget-bl search-widget">
