cube icon fix >.>

--- a/soverance.com/Views/Blog/Index.cshtml
+++ b/soverance.com/Views/Blog/Index.cshtml
@@ -65,7 +65,7 @@
                                         <span class="color-2 fsize-14 ml5">by @post.Author</span>
                                     </div>
                                     <div class="table-cell valign-middle text-right">
-                                        <i class="fa fa-comment color-1 fsize-14" aria-hidden="true"></i>
+                                        <i class="fa fa-cube color-1 fsize-14" aria-hidden="true"></i>
                                         @if (User.Identity.IsAuthenticated)
                                         {
                                             <span class="color-2 fsize-14 ml5"><a asp-action="EditPost" asp-route-id="@post.PostId">Edit</a> | <a asp-action="DeletePost" asp-route-id="@post.PostId">Delete</a></span>
@@ -172,7 +172,7 @@
                                         <span class="color-2 fsize-14 ml5">by @post.Author</span>
                                     </div>
                                     <div class="table-cell valign-middle text-right">
-                                        <i class="fa fa-comment color-1 fsize-14" aria-hidden="true"></i>
+                                        <i class="fa fa-cube color-1 fsize-14" aria-hidden="true"></i>
                                         @if (User.Identity.IsAuthenticated)
                                         {
                                             <span class="color-2 fsize-14 ml5"><a asp-action="EditPost" asp-route-id="@post.PostId">Edit</a> | <a asp-action="DeletePost" asp-route-id="@post.PostId">Delete</a></span>
