Working contact forms
SMTP config now functional

--- a/soverance.com/Areas/Team/Views/Team/ScottMcCutchen.cshtml
+++ b/soverance.com/Areas/Team/Views/Team/ScottMcCutchen.cshtml
@@ -12,7 +12,7 @@
             <div class="breadcrumbs">
                 <a asp-area="" asp-controller="Home" asp-action="Index">Home</a> /
                 <a href="#">Studio</a> /
-                <a asp-area="" asp-controller="Home" asp-action="Team">Team</a> /
+                <a asp-area="Team" asp-controller="Team" asp-action="Index">Team</a> /
                 <span class="color-1">Scott McCutchen</span>
             </div>
         </div>
@@ -101,9 +101,9 @@
                                         I started my first business in 2002 - a skatepark built inside an old marble factory - and I&#39;ve been building companies ever since.
                                     </p>
                                     <p>
-                                        As a member of the Microsoft Partner Network, I can help your company design, build, and optimize your computer network into
-                                        a hybrid environment of on-prem and cloud resources, ideal for modern application development. <a href="/consulting">Check out all of my available services.</a>
-                                        To facilitate my skills, I use Unreal Engine technology to bring my ideas to life as innovative gaming experiences for platforms such as Steam, PlayStation, XBox, and Oculus VR.
+                                        As a member of the Microsoft Partner Network, I can help your company design and deploy a computer network optimzed for small business,
+                                        using world-class cloud solutions that integrate with your existing on-prem infrastructure. <a href="/consulting">Check out all of my available services.</a>
+                                        To keep my skills on the cutting edge, I use Unreal Engine technology to bring my ideas to life as innovative gaming experiences for platforms such as Steam, PlayStation, XBox, and Oculus VR.
 
                                     </p>
                                     <p>
@@ -113,23 +113,23 @@
                                 <div class="mt60">
                                     <blockquote class="mt50 p60 text-center">
                                         <div class="fsize-18 italic ptb30">
-                                            «Buffalo andouille strip steak salami, spare ribs capicola pancetta meatloaf tail hamburger leberkas shankle ribeye. Kevin biltong shank cupim. Short ribs pig pork belly, pastrami tail.»
+                                            «Whether you think you can, or you think you can't... you're right.»
                                         </div>
                                         <div class="table mb0 pb30">
                                             <div class="table-row">
                                                 <div class="table-cell valign-middle">
                                                     <div class="fsize-24 fweight-700 font-agency color-white uppercase">
-                                                        William Castro
+                                                        Henry Ford
                                                     </div>
                                                     <div class="fsize-14 fweight-700 uppercase color-1">
-                                                        Gamer
+                                                        Business Magnate
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </blockquote>
                                     <div class="position mt10">
-                                        Fun Facts About Me
+                                        <h5 class="fsize-32 fweight-700 font-agency uppercase">Fun Facts About Me</h5>
                                     </div>
                                     <ul class="list-1 color5">
                                         <li class="color5">The first time I flew in an airplane, I jumped out of it! (<i>Skydiving</i>)</li>
@@ -215,7 +215,7 @@
                                         </div>
                                         <div id="progressline14" class="progress-line mb30">
                                             <div class="progress-title">
-                                                Systems / Combat Design
+                                                Systems Design
                                             </div>
                                         </div>
                                         <div id="progressline15" class="progress-line mb30">
