--- a/soverance.com/Views/Blog/CreateCategory.cshtml
+++ b/soverance.com/Views/Blog/CreateCategory.cshtml
@@ -44,7 +44,8 @@
     </div>
 </section>
 <!-- SECTION END -->
-
+<!-- VALIDATION START -->
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<!-- VALIDATION END -->
