--- a/soverance.com/Views/Blog/EditCategory.cshtml
+++ b/soverance.com/Views/Blog/EditCategory.cshtml
@@ -52,7 +52,8 @@
     </div>
 </section>
 <!-- SECTION END -->
-
+<!-- VALIDATION START -->
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<!-- VALIDATION END -->
