--- a/soverance.com/Views/Blog/EditPost.cshtml
+++ b/soverance.com/Views/Blog/EditPost.cshtml
@@ -181,7 +181,8 @@
     </div>
 </section>
 <!-- SECTION END -->
-
+<!-- VALIDATION START -->
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+<!-- VALIDATION END -->
